# bevy_param_shaders

./: .gitignore  Cargo.toml
assets/: word_line_segment.wgsl
examples/: basic.rs  bench.rs  bevy.rs  bloom.rs  custom_fill.rs  gallery.rs  hot_reload.rs  int_params.rs  missing_shader_detection.rs  multiple_extracts.rs  params.rs  params_in_fill.rs  resource_params.rs  sorting.rs  time.rs  transforms.rs  two_cameras.rs  word_salad_logo.rs
src/: bundle.rs  check_shapes.rs  components.rs  fragment_shader.rs  frame.rs  helpers.rs  lib.rs  parameterized_shader.rs  pipeline_key.rs  primitives.rs  sdf_assets.rs  shader_loading.rs  shader_params.rs  shader_pipeline.rs  vertex_shader.rs
src/shaders/fill/: fill_with_border.wgsl  simple.wgsl
src/shaders/sdf/: circle.wgsl  rect.wgsl  rounded_rect.wgsl
