[package]
name = "bevy_param_shaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset", # needed for handle ids
]}
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
copyless = "0.1"
bitflags = "2.4"
fixedbitset = "0.4"
radsort = "0.1.0"

[dev-dependencies]
bevy = { version = "0.12", default-features = false, features = [
  "bevy_winit",
  "x11", # github actions runners don't have libxkbcommon installed, so can't use wayland
  "file_watcher",
] }
bevy_pancam = "0.10"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
