[package]
name = "bevy_param_shaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset", # needed for handle ids
]}
bytemuck = { version = "1.14", features = ["derive"] }
bitflags = "2.5"
radsort = "0.1.0"

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_winit",
  "x11", # github actions runners don't have libxkbcommon installed, so can't use wayland
  "file_watcher",
  "multi-threaded"
] }
bevy_pancam = "0.11"
rand = "0.8"
bevy_image_export = "0.10"
# profiling-procmacros = "1.0.15"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
