[package]
name = "bevy_param_shaders"
version = "0.14.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset", # needed for handle ids
]}
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2.5"
radsort = "0.1.0"
uuid = { version = "1.9.1", default-features = false}

[dev-dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset", # needed for handle ids
  "bevy_winit",
  "x11", # github actions runners don't have libxkbcommon installed, so can't use wayland
  "file_watcher",
  "multi_threaded"
] }
bevy_pancam = "0.12"
rand = "0.8"
bevy_image_export = "0.11"
# profiling-procmacros = "1.0.15"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[features]
